# YaraOnMap

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  OPERATIONS.md  README.md  SECURITY.md
.github/workflows/: ci.yml
ADR/: 0001-initial-architecture.md
config/: default.yaml
deploy/: compose.yaml
deploy/docker/: Dockerfile
examples/replay/: mapping_sample.json
examples/rules/: mz.yar
scripts/: bootstrap.ps1  dev-run.ps1  release.ps1  sbom.ps1
tests/integration/: test_replay.rs
tests/unit/: test_cache.rs
yara_on_map/: Cargo.toml
yara_on_map/src/: config.rs  engine.rs  lib.rs  metrics.rs  pager.rs  quarantine.rs  scheduler.rs  types.rs  watcher.rs
yara_on_map/tests/: cache.rs
yom/: Cargo.toml
yom/tests/: replay.rs
