[package]
name = "yara_on_map"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "User-mode Windows memory map scanner with YARA-on-map and quarantine."
repository = "https://github.com/wythwool/YaraOnMap"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
crossbeam-channel = "0.5.13"
crc32fast = "1.4.2"
parking_lot = "0.12.3"
dashmap = "5.5.3"
time = { version = "0.3.36", features = ["formatting"] }
tiny_http = "0.12.0"
log = "0.4.22"
env_logger = "0.11.5"
rayon = "1.10.0"
hex = "0.4.3"
cfg-if = "1.0.0"
uuid = { version = "1.10.0", features = ["v4"] }
tempfile = "3.10.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = [
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_Foundation"
] }
