[package]
name = "yom"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "YARA-on-Map: memory map scanner on Windows."
repository = "https://github.com/wythwool/YaraOnMap"

[dependencies]
yara_on_map = { path = "../yara_on_map" }
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
log = "0.4.22"
env_logger = "0.11.5"
crossbeam-channel = "0.5.13"
time = { version = "0.3.36", features = ["formatting"] }
hex = "0.4.3"
tiny_http = "0.12.0"
tempfile = "3.10.1"
rayon = "1.10.0"
